<resources>
    <string name="app_name">Dear Diary</string>

    <string name="hint_title">What\'s on your mind today?</string>
    <string name="hint_note">Start typing…</string>
    <string name="hint_category">Category</string>
    <string name="hint_mood">Mood</string>
    <string name="hint_tags">Tags</string>
    <string name="hint_time">12:01 pm</string>
    <string name="hint_date">01</string>
    <string name="hint_day">Monday</string>
    <string name="hint_month_year">Jan 2018</string>
    <string name="hint_image">mood</string>

    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_attach">Attach</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
